--- a/.gitignore
+++ b/.gitignore
@@ -138,5 +138,7 @@ dist
 #-------------------------------------------Python-------------------------------------------------
 
 # Python cache
-
 __pycache__/
+
+# virtual environment
+venv/
