added new packages - lucide-react added - google-genai added - requirements.txt updated

--- a/lct_app/package.json
+++ b/lct_app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "dagre": "^0.8.5",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.0",
