--- a/.gitignore
+++ b/.gitignore
@@ -139,12 +139,30 @@ dist
 
 # Python cache
 __pycache__/
+*.py[cod]
+*$py.class
 
-# notebooks
-*.ipynb
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+*.egg
 
-# virtual environment
+# Virtual environments
 venv/
+env/
+ENV/
 
-# saved JSON files
-/saved_json
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Jupyter Notebook
+*.ipynb
+.ipynb_checkpoints
+
+# Project specific
+/saved_json/
+/prompts_and_transcripts/
