--- a/lct_app/package.json
+++ b/lct_app/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "dagre": "^0.8.5",
+    "firebase": "^12.1.0",
+    "katex": "^0.16.22",
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.0.0",
+    "react-katex": "^3.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "reactflow": "^11.11.4",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
