--- a/lct_app/package.json
+++ b/lct_app/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "reactflow": "^11.11.4",
+    "reconnecting-websocket": "^4.4.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "tailwindcss": "^4.0.12"
